this is 2nd version

--- a/practice.html
+++ b/practice.html
@@ -52,16 +52,17 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch17.png" alt="">
                 </div>
                 <div class="desc">
                     <P> Apple Watch SE (2nd Gen) [GPS 40mm] Smartwatch with Starlight Aluminium Case with Starlight Sport Band S/M.</p>
+                        <!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -71,35 +72,35 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch18.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Bulova Classic Quartz Ladies Watch, Stainless Steel Diamond  </p>
+                    <P>Bulova Classic Quartz Ladies Watch, Stainless Steel Diamond  </p><!--Name and description of the product-->
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
                     <div class="btn2">
                         <button><h3>Buy Now</h3></button>
                     </div>
-                </div><!--Buttons to buy or add to cart products-->
+                </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch19.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Anne Klein Women's Genuine Diamond Dial Bracelet Watch </p>
+                    <P>Anne Klein Women's Genuine Diamond Dial Bracelet Watch </p><!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -109,16 +110,16 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch20.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Rolex Oyster Perpetual 31 Automatic Chronometer Yellow Dial Ladies Watch 277200YLSO </p>
+                    <P>Rolex Oyster Perpetual 31 Automatic Chronometer Yellow Dial Ladies Watch 277200YLSO </p><!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -130,16 +131,17 @@
         </div>
         <div class="middleRow">
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch21.png" alt="">
                 </div>
                 <div class="desc">
                     <P>Fossil Raquel Women's Watch with Rectangular Case and Stainless Steel Bracelet or Leather Band </p>
+                        <!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -149,16 +151,17 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch22.png" alt="">
                 </div>
                 <div class="desc">
                     <P>Citizen Ladies' Eco-Drive Classic Crystal Watch in Two-Tone Stainless Steel, Silver-Tone Dial </p>
+                        <!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -168,16 +171,17 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch23.png" alt="">
                 </div>
                 <div class="desc">
                     <P>Rolex Oyster Perpetual 31 Automatic Chronometer Blue Dial Ladies Watch 277200BLSO </p>
+                        <!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -187,16 +191,17 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch24.png" alt="">
                 </div>
                 <div class="desc">
                     <P>Bulova Ladies Modern Gemini Diamond Silver and Gold Stainless Steel Watch,Tonneau Shape Blue Dial, Model: 98P218  </p>
+                        <!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -206,16 +211,16 @@
                 </div>
             </div>
             <div class="product"><!--product card-->
-                <div class="productImage">
+                <div class="productImage"><!--Image of product-->
                     <img src="./assets/images/watch25.png" alt="">
                 </div>
                 <div class="desc">
-                    <P>Nine West Women's Strap Watch </p>
+                    <P>Nine West Women's Strap Watch </p><!--Name and description of the product-->
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,213</h2><!--Price of the product-->
                 </div>
-                <div class="productBtn">
+                <div class="productBtn"><!--buttons to add to cart or to buy products-->
                     <div class="btn1">
                         <button><h3>Add to cart</h3></button>
                     </div>
@@ -227,16 +232,17 @@
             </div>
             <div class="bottomRow">
                 <div class="product"><!--product card-->
-                    <div class="productImage">
+                    <div class="productImage"><!--Image of product-->
                         <img src="./assets/images/watch26.png" alt="">
                     </div>
                     <div class="desc">
                         <P>GUESS Women's Stainless Steel + Stain Resistant Silicone Watch  </p>
+                            <!--Name and description of the product-->
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,213</h2><!--Price of the product-->
                     </div>
-                    <div class="productBtn">
+                    <div class="productBtn"><!--buttons to add to cart or to buy products-->
                         <div class="btn1">
                             <button><h3>Add to cart</h3></button>
                         </div>
@@ -246,16 +252,17 @@
                     </div>
                 </div>
                 <div class="product"><!--product card-->
-                    <div class="productImage">
+                    <div class="productImage"><!--Image of product-->
                         <img src="./assets/images/watch28.png" alt="">
                     </div>
                     <div class="desc">
                         <P>Anne Klein Women's Black Ceramic Bracelet Watch with Diamond Accent  </p>
+                            <!--Name and description of the product-->
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,213</h2><!--Price of the product-->
                     </div>
-                    <div class="productBtn">
+                    <div class="productBtn"><!--buttons to add to cart or to buy products-->
                         <div class="btn1">
                             <button><h3>Add to cart</h3></button>
                         </div>
@@ -265,16 +272,17 @@
                     </div>
                 </div>
                 <div class="product"><!--product card-->
-                    <div class="productImage" >
+                    <div class="productImage" ><!--Image of product-->
                         <img src="./assets/images/watch27.png" alt="">
                     </div>
                     <div class="desc">
                         <P>Anne Klein Women's Premium Crystal Accented Bangle Watch and Bracelet Set </p>
+                            <!--Name and description of the product-->
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,213</h2><!--Price of the product-->
                     </div>
-                    <div class="productBtn">
+                    <div class="productBtn"><!--buttons to add to cart or to buy products-->
                         <div class="btn1">
                             <button><h3>Add to cart</h3></button>
                         </div>
@@ -284,16 +292,17 @@
                     </div>
                 </div>
                 <div class="product" ><!--product card-->
-                    <div class="productImage" >
+                    <div class="productImage" ><!--Image of product-->
                         <img src="./assets/images/watch29.png" alt="" >
                     </div>
                     <div class="desc">
                         <P>Michael Kors Slim Runway Women's Watch, Stainless Steel Bracelet Watch for Women </p>
+                            <!--Name and description of the product-->
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,213</h2><!--Price of the product-->
                     </div>
-                    <div class="productBtn">
+                    <div class="productBtn"><!--buttons to add to cart or to buy products-->
                         <div class="btn1">
                             <button><h3>Add to cart</h3></button>
                         </div>
@@ -303,16 +312,17 @@
                     </div>
                 </div>
                 <div class="product"><!--product card-->
-                    <div class="productImage">
+                    <div class="productImage"><!--Image of product-->
                         <img src="./assets/images/watch30.png" alt="">
                     </div>
                     <div class="desc">
                         <P>GUESS Petite Silver-Tone Crystal Bracelet Watch</p>
+                            <!--Name and description of the product-->
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,213</h2><!--Price of the product-->
                     </div>
-                    <div class="productBtn">
+                    <div class="productBtn"><!--buttons to add to cart or to buy products-->
                         <div class="btn1">
                             <button><h3>Add to cart</h3></button>
                         </div>
