this is 4rt version

--- a/menwatch.html
+++ b/menwatch.html
@@ -24,8 +24,8 @@
                 </ul>
             </div>
             <div class="searchBox">
-                <input type="search" class="search" placeholder="Search for a item" >
-                <a href=""><button class="searchButton">Search</button></a>
+                <input type="search" class="search" placeholder="Search for a item" onblur="search()" >
+                <button class="searchButton" onclick="search()">Search</button>
             </div>
         </div>
         </header>
@@ -322,6 +322,7 @@
                     </div>
                 </div>
             </div>
+            <div style="display: flex; justify-content: center;">
             <div class="pagination">
                 <a href="kidswatch.html"><</a>
                 <a href="menwatch.html" class="active">1</a>
@@ -330,6 +331,7 @@
                 <a href="practice.html">></a>
             </div>
             </main>
+            </div>
             </div>
             <footer>
                 <div class="containerr"> <!-- footerContainer-->
