--- a/kidswatch.html
+++ b/kidswatch.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kids-Section</title>
+    
     <link rel="stylesheet" href="practice.css">
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
@@ -25,8 +26,8 @@
                 </ul>
             </div>
             <div class="searchBox">
-                <input type="search" class="search" placeholder="Search for a item" >
-                <a href=""><button class="searchButton">Search</button></a>
+                <input type="search" class="search" placeholder="Search for a item" onblur="search()" >
+                <button class="searchButton" onclick="search()">Search</button>
             </div>
         </div>
         </header>
@@ -323,6 +324,7 @@
                     </div>
                 </div>
             </div>
+            <div style="display: flex; justify-content: center;">
             <div class="pagination">
                 <a href="practice.html"><</a>
                 <a href="menwatch.html">1</a>
@@ -331,6 +333,7 @@
                 <a href="menwatch.html">></a>
             </div>
             </main>
+            </div>
             </div>
             <footer>
                 <div class="containerr"> <!-- footerContainer-->
