--- a/kidswatch.html
+++ b/kidswatch.html
@@ -324,16 +324,16 @@
                     </div>
                 </div>
             </div>
-            <div style="display: flex; justify-content: center;">
-            <div class="pagination">
-                <a href="practice.html"><</a>
-                <a href="menwatch.html">1</a>
-                <a href="practice.html">2</a>
-                <a href="kidswatch.html" class="active">3</a>
-                <a href="menwatch.html">></a>
-            </div>
+            
             </main>
-            </div>
+            </div><div style="display: flex; justify-content: center;">
+                <div class="pagination">
+                    <a href="practice.html"><</a>
+                    <a href="menwatch.html">1</a>
+                    <a href="practice.html">2</a>
+                    <a href="kidswatch.html" class="active">3</a>
+                    <a href="menwatch.html">></a>
+                </div>
             </div>
             <footer>
                 <div class="containerr"> <!-- footerContainer-->
