this is 6th version

--- a/kidswatch.html
+++ b/kidswatch.html
@@ -22,7 +22,13 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Research</a></li>
-                    <li><a href="#">Products</li></a>
+                    <li class="dropnav"><a href="">Categories</a>
+                        <ul class="dropdown">
+                            <li><a href="menwatch.html" target="_main">Men</a></li> 
+                            <li><a href="practice.html" target="_main">Women</a></li>
+                            <li><a href="kidswatch.html" target="_main">Kids</a></li>
+                        </ul> 
+                    
                 </ul>
             </div>
             <div class="searchBox">
@@ -290,7 +296,7 @@
                         <img src="./assets/images/watch44.png" alt="">
                     </div>
                     <div class="desc">
-                        <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Inexpensive Gift & Party Favor for Toddlers, Boys. </p>
+                        <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Gift & Party Favor for Toddlers, Boys. </p>
                         </div>
                     <div class="price">
                        <h2>RS.2,213</h2>
@@ -309,7 +315,7 @@
                         <img src="./assets/images/watch45.png" alt="">
                     </div>
                     <div class="desc">
-                        <P>EasyRead Time Teacher - Teaching Watch For Kids- Kids Learning Watch - Learn to Tell The Time Wrist Watch For Kids - 2 Step Time Teacher Watch </p>
+                        <P>EasyRead Time Teacher - Teaching Watch For Kids- Learn to Tell The Time Wrist Watch For Kids - 2 Step Time Teacher Watch </p>
                         </div>
                     <div class="price">
                        <h2>RS.2,213</h2>
