--- a/menwatch.html
+++ b/menwatch.html
@@ -20,7 +20,12 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Research</a></li>
-                    <li><a href="#">Products</li></a>
+                    <li class="dropnav"><a href="">Categories</a>
+                        <ul class="dropdown">
+                            <li><a href="menwatch.html" target="_main">Men</a></li> 
+                            <li><a href="practice.html" target="_main">Women</a></li>
+                            <li><a href="kidswatch.html" target="_main">Kids</a></li>
+                        </ul> 
                 </ul>
             </div>
             <div class="searchBox">
