--- a/practice.html
+++ b/practice.html
@@ -20,8 +20,15 @@
                     <li><a href="#">About us</a></li>
                     <li><a href="#">Blog</a></li>
                     <li><a href="#">Research</a></li>
-                    <li><a href="#">Products</li></a>
-                </ul>
+                    <li class="dropnav"><a href="">Categories</a>
+                        <ul class="dropdown">
+                            <li><a href="menwatch.html" target="_main">Men</a></li> 
+                            <li><a href="practice.html" target="_main">Women</a></li>
+                            <li><a href="kidswatch.html" target="_main">Kids</a></li>
+                        </ul> 
+
+                  <!--  <li><a href="#">Products</li></a>-->
+              </ul>
             </div><!--code for navigation bar-->
             <div class="searchBox">
                 <input type="search" class="search" placeholder="Search for an item" onblur="search()" >
