this is 7th version

--- a/menwatch.html
+++ b/menwatch.html
@@ -29,7 +29,7 @@
                 </ul>
             </div>
             <div class="searchBox">
-                <input type="search" class="search" placeholder="Search for a item" onblur="search()" >
+                <input type="search" class="search" placeholder="Search for an item" onblur="search()" >
                 <button class="searchButton" onclick="search()">Search</button>
             </div>
         </div>
@@ -64,7 +64,7 @@
                     <P>Timex Men's Easy Reader Watch  </p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.4,363.56</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -83,7 +83,7 @@
                     <P>GUESS Men's Stainless Steel Gunmetal Chronograph Bracelet Watch</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.14,445.84</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -102,7 +102,7 @@
                     <P>Casio MDV106 Series | Unisex Analog Watch | 200M WR | Stainless Steel Case | Resin Band</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.10,777</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -121,7 +121,7 @@
                     <P>Timex Men's Expedition Scout 40mm Watch</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.8,004</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -142,7 +142,7 @@
                     <P>Blue Submariner, Alluminium Bezel, Year 2008, with full set (Box, Papers and Warranty Card).</h3></p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.12,10,011</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -161,7 +161,7 @@
                     <P>Fossil Machine Men's Watch with Stainless Steel or Leather Band, Chronograph or Analog Watch Display</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.17,802</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -180,7 +180,7 @@
                     <P>Timex Expedition Rugged Core Analog Watch, Full Size</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.5,592</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -199,7 +199,7 @@
                     <P>Bulova Men's Marine Star Two-Tone Stainless Steel Chronograph Quartz Watch, Blue Dial Style: 98H37</p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.13,209</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -218,7 +218,7 @@
                     <P>Apple Watch Series 7 (GPS, 45mm) Green Aluminum Case with Clover Sport Band, Regular (Renewed) </p>
                 </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.17,664</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -239,7 +239,7 @@
                         <P>Apple Watch Series 8 [GPS 45mm] Smart Watch w/Midnight Aluminum Case with Midnight Sport Band </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.18,213</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -258,7 +258,7 @@
                         <P>Invicta Pro Diver 30026 Men's Quartz Watch - 43 mm  </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.8,004</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -277,7 +277,7 @@
                         <P>Casio - Mens Blk Digital G-Shock Watch (DW9052-1BCG) </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.4,999</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -296,7 +296,7 @@
                         <P>Casio FT500WC Series | Men's Analog Watch | 100 Meter Water Resistance | LED Light | Date Display | Leather/Cloth Band  </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.7,999</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -315,7 +315,7 @@
                         <P>SEIKO Watch for Men - with Solar Chronograph, 6-Month Power Reserve, Date Calendar, and Water-Resistant to 100m  </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.45,560</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
