--- a/kidswatch.html
+++ b/kidswatch.html
@@ -32,7 +32,7 @@
                 </ul>
             </div>
             <div class="searchBox">
-                <input type="search" class="search" placeholder="Search for a item" onblur="search()" >
+                <input type="search" class="search" placeholder="Search for an item" onblur="search()" >
                 <button class="searchButton" onclick="search()">Search</button>
             </div>
         </div>
@@ -48,7 +48,7 @@
                     <P>Disney Frozen Kids' Plastic Time Teacher Analog Quartz Silicone Strap Watch  </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,372</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -67,7 +67,7 @@
                     <P> Disney Mickey Mouse Kids' Bezel Stainless Steel Time Teacher Analog Nylon Strap Watch .</p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.1,242</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -86,7 +86,7 @@
                     <P>A ALPS Pink cat Watch Plus White cat Strap </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.1,654.62</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -105,7 +105,7 @@
                     <P>STAR WARS Kids' Bezel Stainless Steel Time Teacher Analog Nylon Strap Watch  </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,078.28</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -124,7 +124,7 @@
                     <P>Disney Kids' W001922 Rapunzel Analog Display Analog Quartz Purple Watch </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,070</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -145,7 +145,7 @@
                     <P>STAR WARS Kids' Plastic Time Teacher Analog Quartz Silicone Strap Watch </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.1,867.14</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -183,7 +183,7 @@
                     <P>Casio WS-1000H-1A Lap Memory Digital Mens Boys Watch WS-1000 100M WR Original  </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.3,450</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -202,7 +202,7 @@
                     <p>Accutime Barbie Printed Strap LED Kids Watch</p>
                       </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,577</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -221,7 +221,7 @@
                     <P>Digital Sports Waterproof Watch for Boys Girls, Outdoor Multifunction Chronograph with Colorful LED Backlight Analog Watches for Children  </p>
                     </div>
                 <div class="price">
-                   <h2>RS.2,213</h2>
+                   <h2>RS.2,622</h2>
                 </div>
                 <div class="productBtn">
                     <div class="btn1">
@@ -242,7 +242,7 @@
                         <P>Cute Corgi Pet Fashion Casual Watches for Women Cute Girls Watch Gift Nurses Teachers s </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.3,312</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -261,7 +261,7 @@
                         <P>Accutime Microsoft Minecraft Green Touchscreen Smart Watch Toy for Toddlers - Selfie Cam, Learning Games, Alarm, Calculator, Step Tracker</p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.4,215</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -280,7 +280,7 @@
                         <P>Casio W-218HC Dull Color, Smoky Color, Nuance Color, Thin, Lightweight, Waterproof, Square, Digital, Square, Kids, Casio </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.2,000</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -299,7 +299,7 @@
                         <P>Accutime Kids Nintendo Super Mario Kart Luigi Bowser Digital LCD Quartz Wrist Watch, Cool Gift & Party Favor for Toddlers, Boys. </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.1,656</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
@@ -318,7 +318,7 @@
                         <P>EasyRead Time Teacher - Teaching Watch For Kids- Learn to Tell The Time Wrist Watch For Kids - 2 Step Time Teacher Watch </p>
                         </div>
                     <div class="price">
-                       <h2>RS.2,213</h2>
+                       <h2>RS.5,313</h2>
                     </div>
                     <div class="productBtn">
                         <div class="btn1">
